--- a/CBDMS/test.html
+++ b/CBDMS/test.html
@@ -10,6 +10,7 @@
 <body>
     <p>this is my first page of html you know</p>
     <p>and this is second file</p>
+    <p>and this is third file</p>
 </body>
 
 </html>
